# transhooter

./: .dockerignore  .env.example  .gitignore  README.md  biome.json  package.json  tsconfig.base.json  tsconfig.json
apps/control-worker/: Dockerfile  package.json  tsconfig.json
apps/control-worker/src/: main.ts
apps/control-worker/src/adapters/: livekit-effects.ts  postgres-store.ts  redis-coordination.ts  s3-archive.ts
apps/control-worker/src/cli/: admin-options.ts  admin-store.ts  create-staff.ts  long-options.ts  set-language.ts
apps/control-worker/test/: cli-options.test.ts  coordinator.test.ts  deadline.test.ts  effect-runner.test.ts  livekit-effects.test.ts  long-options.test.ts  postgres-effect-claim-integration.test.ts  postgres-store-checkpoints.test.ts  reconciliation.test.ts  redis-coordination.test.ts  runtime-config.test.ts  s3-archive.test.ts  tsconfig.json
apps/spool-drainer/: main.py
apps/translation-worker/: main.py
apps/web/: Dockerfile  instrumentation.node.ts  instrumentation.ts  next.config.ts  package.json  proxy.ts  tsconfig.json
apps/web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx
apps/web/app/api/: _route.ts
apps/web/components/: app-shell.tsx  archive-actions.tsx  auth-forms.tsx  brand-mark.tsx  consultation-actions.tsx  consultation-room.tsx  egress-layout.module.css  egress-layout.tsx  interface-state.ts  language-admin.tsx  lobby.module.css  lobby.tsx  logout-button.tsx  room.module.css  status-badge.tsx
apps/web/lib/: archive-pagination.test.ts  browser-api.ts  composition.ts  config.test.ts  config.ts  consultation-routing.ts  interface-state.test.ts  livekit-webhook.test.ts  livekit-webhook.ts  lobby-phase.test.ts  lobby-phase.ts  room-policy.test.ts  room-policy.ts  runtime-adapters.test.ts  runtime-adapters.ts  server-application.test.ts  server-application.ts  telemetry.ts
deploy/compose/: chrome-sandboxing-seccomp-profile.json  compose.demo.fixture.yml  compose.demo.google.yml  compose.demo.providers.yml  compose.demo.yml  compose.google-speech.yml  compose.google.yml  compose.providers.yml  compose.test.yml  compose.yml  egress.yaml  livekit.yaml  otel-collector.yaml
deploy/docker/: bootstrap.Dockerfile  e2e.Dockerfile  failure-smoke.Dockerfile  minio.Dockerfile  spool-drainer.Dockerfile  test.Dockerfile  translation-runtime.Dockerfile  translation-worker.Dockerfile  typescript.Dockerfile
deploy/helm/transhooter/: Chart.yaml  values.schema.json  values.yaml
deploy/scripts/: compose-lib.sh  egress_readiness.py  init-secrets.sh  migrate.mjs  migration-plan.mjs  minio_bootstrap.py  minio_identities.sh  postgres_bootstrap.sh  render-config.sh  run-tests.sh  spool-cutover-gate.sh
scripts/: demo-consultation  dev-down  dev-logs  dev-reset  dev-stop  dev-up  failure-smoke  failure-smoke-parallel  run-tests  smoke-consultation
services/spool-drainer/: pyproject.toml
services/spool-drainer/src/transhooter_spool_drainer/: __init__.py  clients.py  delivery.py  healthcheck.py  runtime.py  s3_archive.py  scenario.py  telemetry.py
services/spool-drainer/tests/: test_clients.py  test_delivery.py  test_runtime.py  test_s3_archive.py  test_scenario.py  test_telemetry.py
services/spool-drainer/tests/fakes/: s3.py
services/translation-worker/: Dockerfile  pyproject.toml
services/translation-worker/src/transhooter_worker/: __init__.py  __main__.py  provider_cli.py  providers.py  telemetry.py
services/translation-worker/src/transhooter_worker/adapters/: __init__.py  diagnostic_archive.py  s3_archive.py  scoped_journal.py  spool.py  spool_crypto.py  terminal.py
services/translation-worker/src/transhooter_worker/adapters/deepgram/: __init__.py  provider.py  sansio.py
services/translation-worker/src/transhooter_worker/adapters/deepl/: __init__.py  provider.py
services/translation-worker/src/transhooter_worker/adapters/fixture/: __init__.py  provider.py  scenario.py
services/translation-worker/src/transhooter_worker/adapters/google/: provider.py
services/translation-worker/src/transhooter_worker/application/: __init__.py  pipeline.py  quotas.py  retry.py  session.py  session_audio.py
services/translation-worker/src/transhooter_worker/domain/: models.py  sample_clock.py
services/translation-worker/src/transhooter_worker/ports/: archive.py  exchange_journal.py  providers.py
services/translation-worker/src/transhooter_worker/runtime/: __init__.py  __main__.py  capability_store.py  checkpoints.py  consultation.py  control_client.py  healthcheck.py  job.py  job_metadata.py  probe.py  provider_registry.py  publisher.py  redis_quota.py  spool_drainer.py  worker.py
services/translation-worker/tests/: test_adapter_runtime_defects.py  test_benchmark_cli.py  test_capability_publication.py  test_checkpoints.py  test_conformance.py  test_control_client.py  test_deepgram.py  test_deepl.py  test_domain.py  test_failure_scenarios.py  test_google_capabilities.py  test_job_metadata.py  test_provider_attempt_reporting.py  test_provider_conformance_matrix.py  test_provider_registry.py  test_publisher.py  test_runtime_pipeline.py  test_s3_archive.py  test_service_boundary.py  test_session_shutdown.py  test_spool.py  test_telemetry.py  test_worker.py
services/translation-worker/tests/fixtures/: provider-benchmark.json
tests/e2e/: consultation-archive-proof.mjs  consultation-browser-workflow.mjs  consultation-harness.mjs  consultation-scenario.mjs  demo-consultation-contracts.test.sh  demo-consultation.mjs  harness-contracts.mjs  harness-contracts.test.mjs  package.json  postgres-concurrency-integration.test.sh  python-service-boundaries-contracts.test.sh  smoke-consultation.mjs
tests/e2e/internal/: smoke-consultation
tests/failure-smoke/: failure-smoke.mjs  harness-contracts.mjs  harness-contracts.test.mjs  package.json  wrapper-contracts.test.sh
tests/failure-smoke/harness/: config.mjs  consultation.mjs  finalize.mjs  runtime.mjs  settlement.mjs
tests/failure-smoke/internal/: failure-smoke  failure-smoke-parallel  run-tests
tests/fixtures/: provider-benchmark.json
(+90 files in other folders)
