[project]
name = "transhooter-spool-drainer"
version = "0.1.0"
description = "Durable Transhooter spool delivery and worker recovery service"
requires-python = ">=3.13,<3.14"
dependencies = [
  "transhooter-spool-store",
  "boto3==1.40.4",
  "httpx==0.28.1",
  "jsonschema==4.25.1",
  "opentelemetry-api==1.44.0",
  "opentelemetry-exporter-otlp-proto-http==1.44.0",
  "opentelemetry-sdk==1.44.0",
]

[dependency-groups]
dev = [
  "import-linter==2.3",
  "mypy==1.17.1",
  "pytest==9.0.3",
  "pytest-asyncio==1.4.0",
  "ruff==0.12.8",
]

[project.scripts]
transhooter-spool-drainer = "transhooter_spool_drainer.runtime:main"
transhooter-spool-drainer-healthcheck = "transhooter_spool_drainer.healthcheck:main"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transhooter_spool_drainer"]

[tool.uv.sources]
transhooter-spool-store = { path = "../../packages/spool-store" }

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["transhooter_spool_drainer"]

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501", "RUF001"]

[tool.importlinter]
root_package = "transhooter_spool_drainer"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Drainer cannot import translation worker"
type = "forbidden"
source_modules = ["transhooter_spool_drainer"]
forbidden_modules = ["transhooter_worker"]

